deploy/k8s/overlays/dgx/grafana-dgx-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: bootstrap
spec:
  template:
    spec:
      containers:
        - name: grafana
