deploy/k8s/overlays/dgx/proxy-patch-device-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-management
  namespace: bootstrap
spec:
  template:
    spec:
      containers:
        - name: device-management
