deploy/k8s/overlays/dgx/proxy-patch-queue-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-worker
  namespace: bootstrap
spec:
  template:
    spec:
      containers:
        - name: queue-worker
